@@ -1,26 +1,16 @@
-#
-# Build
-#
-FROM maven:3.9.5-amazoncorretto-21-al2023 as buildtime
-WORKDIR /build
+# Step 1: Use Maven to build the project
+FROM maven:3.9.5-amazoncorretto-21-al2023 AS build
+WORKDIR /app
 COPY . .
-RUN mvn clean package -Dmaven.test.skip=true
+RUN mvn clean package -DskipTests
 
-FROM amazoncorretto:21.0.1-alpine3.18 as builder
-COPY --from=buildtime /build/target/*.jar application.jar
-RUN java -Djarmode=layertools -jar -Dspring.profiles.active=prod application.jar extract
+# Step 2: Use Amazon Corretto JDK to run the application
+FROM amazoncorretto:21-alpine
+WORKDIR /app
+COPY --from=build /app/target/*.jar app.jar
 
-
-FROM ghcr.io/pagopa/docker-base-springboot-openjdk17:latest
-ADD --chown=spring:spring https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/download/v1.25.1/opentelemetry-javaagent.jar .
-
-COPY --chown=spring:spring  --from=builder dependencies/ ./
-# COPY --chown:spring:spring  --from=builder snapshot-dependencies/ ./
-# https://github.com/moby/moby/issues/37965#issuecomment-426853382
-RUN true
-# COPY --chown:spring:spring  --from=builder spring-boot-loader/ ./
-# COPY --chown:spring:spring  --from=builder application/ ./
-
+# Expose the port your Spring Boot application runs on
 EXPOSE 8080
 
-ENTRYPOINT ["java","-javaagent:opentelemetry-javaagent.jar","--enable-preview","org.springframework.boot.loader.JarLauncher"]
+# Run the Spring Boot application
+ENTRYPOINT ["java", "-jar", "app.jar"]
